// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleButton when no properties are set matches snapshot 1`] = `
<div
  className="tm-toggle-button"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
>
  <svg
    fill="currentColor"
    focusable={false}
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M7 10l5 5 5-5z"
    />
  </svg>
</div>
`;

exports[`ToggleButton when properties are set matches snapshot 1`] = `
<div
  aria-label="title"
  className="tm-toggle-button"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  title="title"
>
  <svg
    fill="currentColor"
    focusable={false}
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
    />
  </svg>
</div>
`;
